--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
   <meta charset="UTF-8">
-  <title>/cineArena.Live</title>
+  <title>cineArena.Live</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Latest Shaka Player UI v4.16.3 -->
