--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/controls.css" crossorigin="anonymous">
   <script src="js/shaka_player.ui.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/all.min.css">
+  <link href="https://www.hls-player.net/fav.png" rel="icon" type="image/x-icon">
   <!-- Material Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="css/icon_family_material_icons" rel="stylesheet">
